.metadata/.plugins/org.eclipse.cdt.ui/project_master_01.build.log
10:00:29 **** Build of configuration Debug for project project_master_01 ****
make -j8 all 
arm-none-eabi-gcc -mcpu=cortex-m3 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f103c8tx.d" -MT"Startup/startup_stm32f103c8tx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f103c8tx.o" "../Startup/startup_stm32f103c8tx.s"
arm-none-eabi-gcc "../Src/can.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -I"F:/STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Device/ST/STM32F1xx/Include" -I"F:/STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/can.d" -MT"Src/can.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/can.o"
arm-none-eabi-gcc "../Src/fonts.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -I"F:/STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Device/ST/STM32F1xx/Include" -I"F:/STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/fonts.d" -MT"Src/fonts.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/fonts.o"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -I"F:/STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Device/ST/STM32F1xx/Include" -I"F:/STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/spi.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -I"F:/STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Device/ST/STM32F1xx/Include" -I"F:/STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/spi.d" -MT"Src/spi.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/spi.o"
arm-none-eabi-gcc "../Src/ssd1306.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -I"F:/STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Device/ST/STM32F1xx/Include" -I"F:/STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/ssd1306.d" -MT"Src/ssd1306.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/ssd1306.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -I"F:/STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Device/ST/STM32F1xx/Include" -I"F:/STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -I"F:/STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Device/ST/STM32F1xx/Include" -I"F:/STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
In file included from ../Src/ssd1306.c:2:
../Src/ssd1306.c: In function 'SSD1306_Init':
../Inc/spi.h:11:25: error: 'GPIO_PIN_3' undeclared (first use in this function)
   11 | #define SPI_RES_PIN     GPIO_PIN_3
      |                         ^~~~~~~~~~
../Src/ssd1306.c:17:18: note: in expansion of macro 'SPI_RES_PIN'
   17 |     GPIOA->BRR = SPI_RES_PIN;
      |                  ^~~~~~~~~~~
../Inc/spi.h:11:25: note: each undeclared identifier is reported only once for each function it appears in
   11 | #define SPI_RES_PIN     GPIO_PIN_3
      |                         ^~~~~~~~~~
../Src/ssd1306.c:17:18: note: in expansion of macro 'SPI_RES_PIN'
   17 |     GPIOA->BRR = SPI_RES_PIN;
      |                  ^~~~~~~~~~~
In file included from ../Src/spi.c:1:
../Src/spi.c: In function 'SPI_Init':
../Inc/spi.h:7:25: error: 'GPIO_PIN_4' undeclared (first use in this function)
    7 | #define SPI_CS_PIN      GPIO_PIN_4
      |                         ^~~~~~~~~~
../Src/spi.c:22:19: note: in expansion of macro 'SPI_CS_PIN'
   22 |     GPIOA->BSRR = SPI_CS_PIN | SPI_DC_PIN | SPI_RES_PIN;
      |                   ^~~~~~~~~~
../Inc/spi.h:7:25: note: each undeclared identifier is reported only once for each function it appears in
    7 | #define SPI_CS_PIN      GPIO_PIN_4
      |                         ^~~~~~~~~~
../Src/spi.c:22:19: note: in expansion of macro 'SPI_CS_PIN'
   22 |     GPIOA->BSRR = SPI_CS_PIN | SPI_DC_PIN | SPI_RES_PIN;
      |                   ^~~~~~~~~~
../Inc/spi.h:10:25: error: 'GPIO_PIN_6' undeclared (first use in this function)
   10 | #define SPI_DC_PIN      GPIO_PIN_6
      |                         ^~~~~~~~~~
../Src/spi.c:22:32: note: in expansion of macro 'SPI_DC_PIN'
   22 |     GPIOA->BSRR = SPI_CS_PIN | SPI_DC_PIN | SPI_RES_PIN;
      |                                ^~~~~~~~~~
../Inc/spi.h:11:25: error: 'GPIO_PIN_3' undeclared (first use in this function)
   11 | #define SPI_RES_PIN     GPIO_PIN_3
      |                         ^~~~~~~~~~
../Src/spi.c:22:45: note: in expansion of macro 'SPI_RES_PIN'
   22 |     GPIOA->BSRR = SPI_CS_PIN | SPI_DC_PIN | SPI_RES_PIN;
      |                                             ^~~~~~~~~~~
../Src/spi.c: In function 'SPI_WriteCommand':
../Inc/spi.h:7:25: error: 'GPIO_PIN_4' undeclared (first use in this function)
    7 | #define SPI_CS_PIN      GPIO_PIN_4
      |                         ^~~~~~~~~~
../Src/spi.c:36:18: note: in expansion of macro 'SPI_CS_PIN'
   36 |     GPIOA->BRR = SPI_CS_PIN;
      |                  ^~~~~~~~~~
../Inc/spi.h:10:25: error: 'GPIO_PIN_6' undeclared (first use in this function)
   10 | #define SPI_DC_PIN      GPIO_PIN_6
      |                         ^~~~~~~~~~
../Src/spi.c:37:18: note: in expansion of macro 'SPI_DC_PIN'
   37 |     GPIOA->BRR = SPI_DC_PIN;
      |                  ^~~~~~~~~~
../Src/spi.c: In function 'SPI_WriteData':
../Inc/spi.h:7:25: error: 'GPIO_PIN_4' undeclared (first use in this function)
    7 | #define SPI_CS_PIN      GPIO_PIN_4
      |                         ^~~~~~~~~~
../Src/spi.c:43:18: note: in expansion of macro 'SPI_CS_PIN'
   43 |     GPIOA->BRR = SPI_CS_PIN;
      |                  ^~~~~~~~~~
../Inc/spi.h:10:25: error: 'GPIO_PIN_6' undeclared (first use in this function)
   10 | #define SPI_DC_PIN      GPIO_PIN_6
      |                         ^~~~~~~~~~
../Src/spi.c:44:19: note: in expansion of macro 'SPI_DC_PIN'
   44 |     GPIOA->BSRR = SPI_DC_PIN;
      |                   ^~~~~~~~~~
make: *** [Src/subdir.mk:37: Src/ssd1306.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [Src/subdir.mk:37: Src/spi.o] Error 1
../Src/main.c: In function 'SysTick_Init':
../Src/main.c:16:21: error: 'SysTick_CTRL_CLKSOURCE' undeclared (first use in this function); did you mean 'SysTick_CTRL_CLKSOURCE_Pos'?
   16 |     SysTick->CTRL = SysTick_CTRL_CLKSOURCE | SysTick_CTRL_TICKINT | SysTick_CTRL_ENABLE;
      |                     ^~~~~~~~~~~~~~~~~~~~~~
      |                     SysTick_CTRL_CLKSOURCE_Pos
../Src/main.c:16:21: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c:16:46: error: 'SysTick_CTRL_TICKINT' undeclared (first use in this function); did you mean 'SysTick_CTRL_TICKINT_Msk'?
   16 |     SysTick->CTRL = SysTick_CTRL_CLKSOURCE | SysTick_CTRL_TICKINT | SysTick_CTRL_ENABLE;
      |                                              ^~~~~~~~~~~~~~~~~~~~
      |                                              SysTick_CTRL_TICKINT_Msk
../Src/main.c:16:69: error: 'SysTick_CTRL_ENABLE' undeclared (first use in this function); did you mean 'SysTick_CTRL_ENABLE_Pos'?
   16 |     SysTick->CTRL = SysTick_CTRL_CLKSOURCE | SysTick_CTRL_TICKINT | SysTick_CTRL_ENABLE;
      |                                                                     ^~~~~~~~~~~~~~~~~~~
      |                                                                     SysTick_CTRL_ENABLE_Pos
make: *** [Src/subdir.mk:37: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

10:00:30 Build Failed. 15 errors, 0 warnings. (took 1s.661ms)

